--- a/GitHubMVCApplication/GitHubMVCApplication/Web.config
+++ b/GitHubMVCApplication/GitHubMVCApplication/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="JavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="false" targetFramework="4.5" />
